<resources>
    <string name="app_name">Zeeero</string>
    <string name="username">Mobile</string>
    <string name="pass">Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="firstname">First Name</string>
    <string name="lasttname">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="emial">Email</string>
    <string name="Sponsorby">Sponsor by</string>
    <string name="autocode">Auto Code</string>
    <string name="TypeManual">Type Manual</string>
    <string name="Register">Register</string>
    <string name="login">Login</string>
    <string name="loginto">Already registered! Login here!</string>
    <string name="regto">Register here!</string>

    <string name="toprated">Top Rated Products</string>
    <string name="viewmore">View More</string>
    <string name="youmaylike">You May Like</string>
    <string name="recenltyviewed">Recently Viewed</string>
    <string name="viewall">View All</string>

    <string name="wallet_balance">Wallet Balance</string>
    <string name="sponsor_balance">Sponsor Balance</string>
    <string name="levelwallet">Level Wallet Transaction History</string>

    <string name="faq">FAQ</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="brands">Brands</string>
    <string name="Forgotpass">Forgot Password</string>
    <string name="newPassword">New Password</string>
    <string name="otp">OTP</string>
    <string name="Passwordupdated">Password Updated</string>
    <string name="message2">Your identity has been verified! \n set your new password</string>
    <string name="message3">Your password has been updated!</string>
    <string name="downline">Downline</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="empty_wishlist">Your Wishlist is Empty !</string>
    <string name="empty_cart">Your Cart is Empty !</string>
    <string name="check_internet">Please Check Your Internet Connection</string>

    <string-array name="sort">
        <item> Sort </item>
        <item> Date </item>
        <item> From </item>
        <item> Credit </item>
        <item> Debit </item>
        <item> Balance </item>
    </string-array>
</resources>