<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        >

        <!-- <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
            >-->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/iv_login"
                        android:layout_width="300dp"
                        android:layout_height="150dp"
                        android:layout_margin="20dp"
                        android:overScrollMode="never"
                        android:scaleType="fitXY"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/logo" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    >


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_gravity="center"
                        android:gravity="center">



                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:cardElevation="10dp"
                            android:elevation="10dp"
                            app:cardBackgroundColor="@color/white"
                            android:foreground="@android:color/transparent"
                            app:cardCornerRadius="25dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:paddingRight="0dp"
                                android:layout_margin="5dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="1dp"
                                    android:gravity="center"
                                    android:padding="1dp"
                                    android:textStyle="normal|bold"
                                    android:text="Registration"
                                    android:fontFamily="@font/montserrat"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    tools:ignore="HardcodedText" />

                                <EditText
                                    android:id="@+id/et_firstname"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="0dp"
                                    android:drawableLeft="@drawable/ic_baseline_person_24"
                                    android:drawablePadding="10dp"
                                    android:hint="@string/firstname"
                                    android:inputType="text"
                                    android:textColor="@color/black">

                                </EditText>

                                <EditText
                                    android:id="@+id/et_lastname"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableLeft="@drawable/ic_baseline_person_24"
                                    android:drawablePadding="10dp"
                                    android:hint="@string/lasttname"
                                    android:inputType="text"
                                    android:textColor="@color/black"
                                    android:layout_marginTop="@dimen/fontStyle5">

                                </EditText>


                                <EditText
                                    android:id="@+id/et_mobile"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/fontStyle5"
                                    android:drawableLeft="@drawable/ic_baseline_mobile_friendly_24"
                                    android:drawablePadding="10dp"
                                    android:hint="@string/mobile"
                                    android:inputType="number"
                                    android:maxLength="10"
                                    android:textColor="@color/black">

                                </EditText>
                                <EditText
                                    android:id="@+id/et_email"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/fontStyle5"
                                    android:drawableLeft="@drawable/ic_baseline_email_24"
                                    android:drawablePadding="10dp"
                                    android:hint="@string/emial"
                                    android:inputType="text"
                                    android:textColor="@color/black">

                                </EditText>

                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/text_input_layout"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:passwordToggleEnabled="true">
                                    <EditText
                                        android:id="@+id/et_pass"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="@dimen/fontStyle5"
                                        android:drawablePadding="10dp"
                                        android:hint="@string/pass"
                                        android:inputType="textPassword"
                                        android:textColor="@color/black"
                                        android:drawableLeft="@drawable/ic_baseline_lock_24"
                                        android:drawableStart="@drawable/ic_baseline_lock_24">

                                    </EditText>
                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:passwordToggleEnabled="true">
                                    <EditText
                                        android:id="@+id/et_conpass"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="@dimen/fontStyle5"
                                        android:drawablePadding="10dp"
                                        android:hint="@string/confirmpass"
                                        android:inputType="textPassword"
                                        android:textColor="@color/black"
                                        android:drawableLeft="@drawable/ic_baseline_lock_24"
                                        android:drawableStart="@drawable/ic_baseline_lock_24">

                                    </EditText>
                                </com.google.android.material.textfield.TextInputLayout>


                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    >

                                    <EditText
                                        android:id="@+id/et_code"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="@dimen/fontStyle5"
                                        android:drawableLeft="@drawable/icbookmark"
                                        android:drawablePadding="10dp"
                                        android:hint="@string/Sponsorby"
                                        android:inputType="text"
                                        android:layout_toLeftOf="@+id/btn_code"
                                        android:textColor="@color/black">

                                    </EditText>

                                    <Button
                                        android:id="@+id/btn_code"
                                        android:layout_width="100dp"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentRight="true"
                                        android:layout_marginRight="-2dp"
                                        android:backgroundTint="@color/colorGrey"
                                        android:text="@string/autocode"
                                        android:textColor="@color/white"
                                        android:textSize="8dp" />


                                </RelativeLayout>


                                <androidx.appcompat.widget.AppCompatCheckBox
                                    android:id="@+id/ch_type"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/TypeManual"
                                    />


                                <TextView
                                    android:id="@+id/btn_reg"
                                    android:layout_width="200dp"
                                    android:layout_height="45dp"
                                    android:background="@drawable/rectangular_circle"
                                    android:backgroundTint="@color/colorPrimary"
                                    android:padding="5dp"
                                    android:layout_margin="10dp"
                                    android:textColor="@color/white"
                                    android:text="@string/Register"
                                    android:gravity="center"
                                    android:layout_gravity="center"
                                    android:textSize="18sp"
                                    tools:ignore="HardcodedText" />


                                <TextView
                                    android:id="@+id/btn_login"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorGrey"
                                    android:text="@string/loginto"
                                    android:gravity="center"
                                    android:layout_gravity="center"
                                    android:textSize="12sp"
                                    android:layout_marginBottom="@dimen/padding_20"
                                    />


                            <TextView
                                    android:id="@+id/btn_home"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/black"
                                    android:text="Home"
                                    android:gravity="center"
                                    android:layout_gravity="center"
                                    android:textSize="12sp"
                                    android:layout_marginBottom="@dimen/padding_20"
                                    />





                            </LinearLayout>



                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>
        <!--</androidx.core.widget.NestedScrollView>-->

    </RelativeLayout>

</layout>