<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">


                <!--1st Layout-->
                <LinearLayout
                    android:id="@+id/layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_centerVertical="true">



                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/que_24"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:visibility="visible"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Forgotpass"
                        android:textAlignment="center"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="Provide your accounts mobile number for which you want to reset your password"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tips are important"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:visibility="gone"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal" >


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            android:weightSum="10"
                            android:gravity="center"
                            android:layout_height="50dp"
                            >

                            <TextView
                                android:id="@+id/usernameicon"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="15dp"
                                android:layout_weight="2"
                                android:drawableLeft="@drawable/ic_baseline_person_24"
                                android:gravity="center"
                                android:textColor="#ffffff" />

                            <EditText
                                android:id="@+id/et_mobile"
                                android:layout_width="0dp"
                                android:layout_weight="8"
                                android:textColor="@color/black"
                                android:hint="Enter mobile"
                                android:background="@null"
                                android:textColorHint="#000000"
                                android:gravity="center|left"
                                android:inputType="number"
                                android:layout_height="match_parent"
                                android:maxLength="10"/>


                        </LinearLayout>

                    </LinearLayout>


                    <Button
                        android:id="@+id/submit1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="next"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:background="@color/colorPrimary"/>
                </LinearLayout>

                <!--2nd Layout-->
                <LinearLayout
                    android:id="@+id/layout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:layout_margin="30dp"
                    android:layout_gravity="left"
                    android:gravity="top"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/que_24"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/img1"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:visibility="visible"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/newPassword"
                        android:textAlignment="center"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/message2"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        android:gravity="center"
                        android:layout_height="50dp"
                        android:visibility="gone"
                        >
                        <TextView
                            android:id="@+id/tv_mobile"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:textColor="#ffffff"
                            android:layout_marginLeft="15dp"
                            android:gravity="center"
                            android:layout_height="match_parent"
                            android:text="@string/mobile"
                            />

                        <EditText
                            android:id="@+id/et_mobile1"
                            android:layout_width="0dp"
                            android:layout_weight="8"
                            android:textColor="#ffffff"
                            android:hint="@string/mobile"
                            android:background="@null"
                            android:textColorHint="#ffffff"
                            android:gravity="center|left"
                            android:inputType="number"
                            android:maxLength="10"
                            android:layout_height="match_parent" />


                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <EditText
                            android:id="@+id/et_otp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/fontStyle5"
                            android:drawablePadding="10dp"
                            android:hint="@string/otp"
                            android:inputType="number"
                            android:textColor="@color/black"
                            android:drawableStart="@drawable/otp"
                            >

                        </EditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">
                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/fontStyle5"
                            android:drawablePadding="10dp"
                            android:hint="@string/pass"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:drawableLeft="@drawable/ic_baseline_lock_24"
                            android:drawableStart="@drawable/ic_baseline_lock_24">

                        </EditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">
                        <EditText
                            android:id="@+id/et_conpass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/fontStyle5"
                            android:drawablePadding="10dp"
                            android:hint="@string/pass"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:drawableLeft="@drawable/ic_baseline_lock_24"
                            android:drawableStart="@drawable/ic_baseline_lock_24">

                        </EditText>
                    </com.google.android.material.textfield.TextInputLayout>



                    <TextView
                        android:id="@+id/text_otp_expire"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="OTP expire after 00:00"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/padding_10"
                        android:textColor="@color/black"/>



                    <Button
                        android:id="@+id/submit2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Update "
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:background="@color/colorPrimary"
                        android:layout_marginTop="50dp"
                        android:layout_gravity="center_horizontal"/>


                    <TextView
                        android:id="@+id/tv_sms_recv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="Didn't receive SMS ? Resend "
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="@dimen/padding_20"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="10dp"
                        android:text="Tap Continue to accept our Terms,Data Policy, cookie use and the Privacy Policy and Terms of Service..."
                        android:textAlignment="center"
                        android:visibility="gone"/>
                </LinearLayout>



                <!--1st Layout-->
                <LinearLayout
                    android:id="@+id/layout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_centerVertical="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/Passwordupdated"
                        android:textAlignment="center"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_baseline_done_24"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/img"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:visibility="visible"
                        />



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/message3"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="login"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:background="@color/colorPrimary"/>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>


    </RelativeLayout>


</layout>